[project]
name = "atlas-ecomplexity-data-handler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hermilo Cortes", email = "hermilocg@hotmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars[all]>=1.33.1",
    "rich>=14.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
